<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_drawer_item1"
        android:icon="@drawable/home"
        android:title="@string/glavnays" />
    <item
        android:id="@+id/navigation_drawer_item10"
        android:icon="@drawable/warning"
        android:title="@string/soglasenie" />
    <item android:title="@string/main">
        <menu>
            <item
                android:id="@+id/navigation_drawer_item2"
                android:icon="@drawable/phone"
                android:title="@string/infoabout" />

            <item
                android:id="@+id/navigation_drawer_item5"
                android:icon="@drawable/battery"
                android:title="@string/calbattery" />

            <item
                android:id="@+id/navigation_drawer_item9"
                android:icon="@drawable/backup"
                android:title="@string/backupandrestore" />

            <item
                android:id="@+id/navigation_drawer_item22"
                android:icon="@drawable/reboot_command"
                android:title="@string/rebootmanager" />
        </menu>
    </item>

    <item android:title="@string/tweaks">
        <menu>
            <item
                android:id="@+id/navigation_drawer_item4"
                android:icon="@drawable/tweak_battery"
                android:title="@string/batterytweaks" />
            <item
                android:id="@+id/navigation_drawer_item6"
                android:icon="@drawable/wifi"
                android:title="@string/internettweaks" />
            <item
                android:id="@+id/navigation_drawer_item7"
                android:icon="@drawable/android"
                android:title="@string/systemtweaks" />

            <item
                android:id="@+id/navigation_drawer_item13"
                android:icon="@drawable/fstrim"
                android:title="FSTRIM" />
            <item
                android:id="@+id/navigation_drawer_item20"
                android:icon="@drawable/mediascanner"
                android:title="MediaServer | MediaScanner" />
            <item
                android:id="@+id/navigation_drawer_item8"
                android:icon="@drawable/media_tweaks"
                android:title="@string/mediatweaks" />

            <item
                android:id="@+id/navigation_drawer_item15"
                android:icon="@drawable/varios"
                android:title="@string/varioustweaks" />
        </menu>
    </item>
    <item android:title="Советы">
        <menu>
            <item
                android:id="@+id/navigation_drawer_item30"
                android:icon="@drawable/faq"
                android:title="FAQ и решение проблем" />
        </menu>
    </item>
    <item android:title="@string/prochee">
        <menu>
            <item
                android:id="@+id/navigation_drawer_item11"
                android:icon="@drawable/bug"
                android:title="@string/connect" />

            <item
                android:id="@+id/navigation_drawer_item24"
                android:icon="@drawable/vkcircle"
                android:title="Наша группа ВК" />

            <item
                android:id="@+id/navigation_drawer_item25"
                android:icon="@drawable/twittercircle"
                android:title="Наша твиттер" />

            <item
                android:id="@+id/navigation_drawer_item12"
                android:icon="@drawable/info"
                android:title="@string/aboutapp" />
            <item
                android:id="@+id/navigation_drawer_item18"
                android:icon="@drawable/exit"
                android:title="@string/exit" />
        </menu>
    </item>
</menu>