<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/systemteweaks"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.01">

            <TextView
                android:id="@+id/textView55"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|top"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|center|center_horizontal"
                android:text="@string/ram"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/spinner6"
                android:layout_width="166dp"
                android:layout_height="match_parent"
                android:layout_gravity="right|top"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <CheckBox
            android:id="@+id/checkBox16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/systemone" />

        <CheckBox
            android:id="@+id/checkBox20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/systemtwo" />

        <CheckBox
            android:id="@+id/checkBox21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/systemthree" />

        <CheckBox
            android:id="@+id/display_cal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/displayfix" />

        <CheckBox
            android:id="@+id/checkBox22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/systemfour" />

        <CheckBox
            android:id="@+id/checkBox23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/systemfive" />

        <CheckBox
            android:id="@+id/checkBox30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/systemsix" />

        <CheckBox
            android:id="@+id/ext4tweak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingTop="10dp"
            android:text="@string/ext4tweak" />

    </LinearLayout>
</ScrollView>