<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/internettweakswelcome"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:gravity="center_vertical|center_horizontal|center"
            android:paddingBottom="10dp"
            android:text="@string/nowe"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff0000"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/firstinternettweak"
            app:buttonTint="@color/textview1good" />

        <CheckBox
            android:id="@+id/checkBox11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/secondinternettweak"
            app:buttonTint="@color/textview1good" />

        <CheckBox
            android:id="@+id/checkBox20171"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/a2017"
            app:buttonTint="@color/textview1good" />

        <CheckBox
            android:id="@+id/checkBox12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/thirdinternettweak"
            app:buttonTint="@color/textview1good" />

        <CheckBox
            android:id="@+id/checkBox13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/forthinternettweak"
            app:buttonTint="@color/textview1good" />

        <CheckBox
            android:id="@+id/checkBox14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/fifthinternettweaks"
            app:buttonTint="@color/textview1good" />

        <CheckBox
            android:id="@+id/checkBox15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/sixinternettweaks"
            app:buttonTint="@color/textview1good" />


    </LinearLayout>
</ScrollView>