<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/variostweaks"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:gravity="center_vertical|center_horizontal|center"
            android:paddingBottom="10dp"
            android:text="@string/nowe"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff0000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/warn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#c71111"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/quickboot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/var1"
            android:theme="@style/BrandedCheckBox" />

        <CheckBox
            android:id="@+id/checkBox24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disableboot"
            android:theme="@style/BrandedCheckBox" />

        <CheckBox
            android:id="@+id/checkBox25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adb"
            android:theme="@style/BrandedCheckBox" />


    </LinearLayout>
</ScrollView>