<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fstrim"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ssd" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:paddingTop="10dp"
            android:text="@string/beforestrim"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.43"
            android:paddingBottom="10dp"
            android:text="@string/fstrimzhel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff0000"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="/system"
            android:theme="@style/BrandedCheckBox" />

        <CheckBox
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:text="/data"
            android:theme="@style/BrandedCheckBox" />

        <CheckBox
            android:id="@+id/cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="/cache"
            android:theme="@style/BrandedCheckBox" />

        <Button
            android:id="@+id/fstrimbutton"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="FSTRIM!" />

        <CheckBox
            android:id="@+id/bootfstrim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fstrimboot"
            android:theme="@style/BrandedCheckBox" />

    </LinearLayout>
</ScrollView>